added sidebar, navbar,profile and dashboard

--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,1 +1,2 @@
-<app-navigation></app-navigation>
+<app-header (toggleSidenav)="sidenav.toggle()"></app-header>
+<app-sidebar #sidenav></app-sidebar>
