Made small changes i.e password eye

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -3,12 +3,12 @@
   <form [formGroup]="loginForm" (ngSubmit)="saveForm()">
     <mat-card class="container" style="width: 350px;">
       <mat-card-header style="margin: 2px auto;">
-        <mat-card-title class="text-center mb-4" >Login</mat-card-title>
+        <mat-card-title class="text-center mb-4">Login</mat-card-title>
       </mat-card-header>
-  
+
       <mat-card-content>
         <div class="row">
-  
+
           <mat-form-field appearance="outline" class="col">
             <mat-label>Email</mat-label>
             <input matInput type="email" id="email" formControlName="email" appNoSpace>
@@ -20,28 +20,28 @@
           </mat-form-field>
         </div>
         <div class="row">
-  
+
           <mat-form-field appearance="outline" class="col">
             <mat-label>Password</mat-label>
-            <input matInput type="password" id="password" formControlName="password" appNoSpace>
-            <mat-error *ngIf="getControl('password')?.invalid && getControl('password')?.touched">
-              <span *ngIf="getControl('password')?.errors?.['required']">Password is required.</span>
-              <span *ngIf="getControl('password')?.errors?.['minlength']">Password must be at least 6 characters long.</span>
-              <mat-error *ngIf="getControl('password')?.errors?.['noSpace']">No spaces allowed.</mat-error>
-            </mat-error>
+            <input matInput [type]="hide ? 'password' : 'text'" placeholder="Password" formControlName="password" appNoSpace>
+            <button mat-icon-button matSuffix (click)="hide = !hide" type="button">
+              <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+            </button>
+            <mat-error *ngIf="getControl('password')?.errors?.['required']">Password is required.</mat-error>
+            
           </mat-form-field>
         </div>
       </mat-card-content>
-  
+
       <mat-card-actions style="margin: 1px auto;">
-        <button mat-raised-button color="primary" type="submit" >Login</button>
+        <button mat-raised-button color="primary" type="submit">Login</button>
       </mat-card-actions>
 
     </mat-card>
     <div class="container" style="display: flex; justify-content: center; align-items: center; margin: 10px auto;">
       <span>Don't have a account? </span>
-      <a mat-button  routerLink="/auth/signup">Sign Up</a>
-  </div>
-    
+      <a mat-button routerLink="/auth/signup">Sign Up</a>
+    </div>
+
   </form>
 </div>
