--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -4,7 +4,7 @@
         <mat-icon svgicon="menu">menu</mat-icon>
       </button>
      
-      <span>Header</span>
+      <a mat-list-item routerLink="/user" style="cursor: pointer;">Header</a>
       <span style="flex: 1 1 auto;"></span>
       <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
         <mat-icon>account_circle</mat-icon>
