--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -1,5 +1,5 @@
 <mat-sidenav-container class="sidenav-container" >
-  <mat-sidenav #sidenav mode="side" class="sidenav" mode="over">
+  <mat-sidenav #sidenav mode="side" class="sidenav">
     <mat-nav-list>
       <a mat-list-item href="">Module 1</a>
       <a mat-list-item href="">Module 2</a>
