--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -10,13 +10,13 @@
             <mat-card-content>
                 <div class="row">
                     <!-- firstname -->
-                    <mat-form-field class="col-6" appearance="fill">
+                    <mat-form-field class="col-6" appearance="outline">
                         <input matInput placeholder="FirstName" formControlName="firstName">
                         <mat-error *ngIf="getControl('firstName')?.errors?.['required']">FirstName is required</mat-error>
                         <mat-error *ngIf="getControl('firstName')?.errors?.['maxlength']">FirstName must be at max 20 characters</mat-error>
                     </mat-form-field>
                     <!-- lastname -->
-                    <mat-form-field class="col-6">
+                    <mat-form-field class="col-6" appearance="outline">
                         <input matInput placeholder="LastName" formControlName="lastName">
                         <mat-error *ngIf="getControl('lastName')?.errors?.['required']">LastName is required</mat-error>
                         <mat-error *ngIf="getControl('lastName')?.errors?.['maxlength']">LastName must be at max 20 characters</mat-error>
@@ -31,7 +31,7 @@
                         <mat-error *ngIf="getControl('email')?.errors?.['email']">Email is invalid</mat-error>
                     </mat-form-field>
                     <!-- phone-->
-                    <mat-form-field class="col-6">
+                    <mat-form-field class="col-6" appearance="outline">
                         <input matInput placeholder="Phone" formControlName="phoneNumber" mask="000-000-0000" [showMaskTyped]="true">
                         <mat-icon matSuffix>phone</mat-icon>
                         <mat-error *ngIf="getControl('phoneNumber')?.errors?.['required']">Phone No is required</mat-error>
@@ -39,7 +39,7 @@
                 </div>
                 <div class="row">
                     <!-- Country -->
-                    <mat-form-field class="col">
+                    <mat-form-field class="col" appearance="outline">
                         <mat-label>Select Country</mat-label>
                         <mat-select formControlName="country">
                             <mat-option *ngFor="let country of countries" [value]="country.id">{{country.name}}</mat-option>
@@ -47,7 +47,7 @@
                         <mat-error *ngIf="getControl('country')?.hasError('required')">Please choose a Country</mat-error>
                     </mat-form-field>
                     <!-- States  -->
-                    <mat-form-field class="col">
+                    <mat-form-field class="col" appearance="outline">
                         <mat-label>Select State</mat-label>
                         <mat-select formControlName="state">
                             <mat-option *ngFor="let state of getStates()" [value]="state.id">{{state.name}}</mat-option>
@@ -58,7 +58,7 @@
                 <div class="row my-3">
                     <!-- gender  -->
                     <mat-label>Gender</mat-label>
-                    <mat-radio-group formControlName="gender">
+                    <mat-radio-group formControlName="gender" >
                         <mat-radio-button value="male">Male</mat-radio-button>
                         <mat-radio-button value="female">Female</mat-radio-button>
                         <!-- <mat-error *ngIf="getControl('gender')?.errors?.['required'] && getControl('password')?.touched">Gender is required</mat-error> -->
@@ -66,7 +66,7 @@
                 </div>
                 <div class="row">
                     <!-- password  -->
-                    <mat-form-field class="col-6">
+                    <mat-form-field class="col-6" appearance="outline">
                         <mat-label>Enter your password</mat-label>
                         <input matInput [type]="hide ? 'password' : 'text'" placeholder="Password"
                             formControlName="password"  >
@@ -80,7 +80,7 @@
                           </mat-error>
                     </mat-form-field>
                     <!-- confirm password  -->
-                    <mat-form-field class="col-6">
+                    <mat-form-field class="col-6" appearance="outline">
                         <mat-label>Confirm password</mat-label>
                         <input matInput [type]="hide1 ? 'password' : 'text'" placeholder="confirmPassword"
                             formControlName="confirmPassword">
