--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -1,9 +1,8 @@
 <mat-sidenav-container class="sidenav-container" >
   <mat-sidenav #sidenav mode="side" class="sidenav">
     <mat-nav-list>
-      <a mat-list-item href="">Module 1</a>
-      <a mat-list-item href="">Module 2</a>
-      <a mat-list-item href="">Module 3</a>
+      <a mat-list-item routerLink="/user">Dashboard</a>
+      <a mat-list-item routerLink="/user/addcourse">Add Course</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
