--- a/src/app/user/add-course/add-course/add-course.component.html
+++ b/src/app/user/add-course/add-course/add-course.component.html
@@ -7,7 +7,7 @@
     No record
   </div>
   <div *ngIf="courses.length > 0">
-    <table mat-table [dataSource]="courses" class="mat-elevation-z8">
+    <table mat-table #table [dataSource]="courses" class="mat-elevation-z8">
       <ng-container matColumnDef="id">
         <th mat-header-cell *matHeaderCellDef> ID </th>
         <td mat-cell *matCellDef="let course"> {{course.id}} </td>
