--- a/src/app/user/add-course/delete-dialog/delete-dialog.component.html
+++ b/src/app/user/add-course/delete-dialog/delete-dialog.component.html
@@ -1,1 +1,10 @@
-<p>delete-dialog works!</p>
+<!-- src/app/delete-confirmation-dialog/delete-confirmation-dialog.component.html -->
+
+<h1 mat-dialog-title>Confirm Delete</h1>
+<div mat-dialog-content>
+  Are you sure you want to delete this course?
+</div>
+<div mat-dialog-actions>
+  <button mat-button (click)="onCancel()">Cancel</button>
+  <button mat-button color="warn" (click)="onConfirm()">Delete</button>
+</div>
