--- a/src/app/user/add-course/add-course/add-course.component.html
+++ b/src/app/user/add-course/add-course/add-course.component.html
@@ -1,38 +1,39 @@
-<!-- src/app/add-course/add-course.component.html -->
+<div class="d-flex h-100">
+  <div class="mx-auto my-auto text-center ">
+    <div class="my-3">
+      <button mat-raised-button color="primary" (click)="addCourse()">Add Course</button>
+    </div>
+    <div *ngIf="courses.length === 0">
+        <p class="text-primary lead my-3">No Record!</p>
+    </div>
+    <div *ngIf="courses.length > 0">
+      <table mat-table #table [dataSource]="courses" class="mat-elevation-z3">
+        <ng-container matColumnDef="id">
+          <th mat-header-cell *matHeaderCellDef> ID </th>
+          <td mat-cell *matCellDef="let course"> {{course.id}} </td>
+        </ng-container>
 
-<div>
-    <button mat-raised-button color="primary" (click)="addCourse()">Add Course</button>
+        <ng-container matColumnDef="name">
+          <th mat-header-cell *matHeaderCellDef> Name </th>
+          <td mat-cell *matCellDef="let course"> {{course.name}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="duration">
+          <th mat-header-cell *matHeaderCellDef> Duration </th>
+          <td mat-cell *matCellDef="let course"> {{course.duration}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="actions">
+          <th mat-header-cell *matHeaderCellDef> Actions </th>
+          <td mat-cell *matCellDef="let course">
+            <button mat-icon-button (click)="editCourse(course)"><mat-icon>edit</mat-icon></button>
+            <button mat-icon-button color="warn" (click)="deleteCourse(course.id)"><mat-icon>delete</mat-icon></button>
+          </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      </table>
+    </div>
   </div>
-  <div *ngIf="courses.length === 0">
-    No record
-  </div>
-  <div *ngIf="courses.length > 0">
-    <table mat-table #table [dataSource]="courses" class="mat-elevation-z8">
-      <ng-container matColumnDef="id">
-        <th mat-header-cell *matHeaderCellDef> ID </th>
-        <td mat-cell *matCellDef="let course"> {{course.id}} </td>
-      </ng-container>
-  
-      <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef> Name </th>
-        <td mat-cell *matCellDef="let course"> {{course.name}} </td>
-      </ng-container>
-  
-      <ng-container matColumnDef="duration">
-        <th mat-header-cell *matHeaderCellDef> Duration </th>
-        <td mat-cell *matCellDef="let course"> {{course.duration}} </td>
-      </ng-container>
-  
-      <ng-container matColumnDef="actions">
-        <th mat-header-cell *matHeaderCellDef> Actions </th>
-        <td mat-cell *matCellDef="let course">
-          <button mat-button (click)="editCourse(course)">Update</button>
-          <button mat-button color="warn" (click)="deleteCourse(course.id)">Delete</button>
-        </td>
-      </ng-container>
-  
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-    </table>
-  </div>
-  
+</div>
