--- a/src/app/user/add-course/course-dialog/course-dialog.component.html
+++ b/src/app/user/add-course/course-dialog/course-dialog.component.html
@@ -2,16 +2,20 @@
 
 <h1 mat-dialog-title>{{ data.course.id ? 'Edit Course' : 'Add Course' }}</h1>
 <div mat-dialog-content>
-  <mat-form-field appearance="fill">
-    <mat-label>Course Name</mat-label>
-    <input matInput [(ngModel)]="course.name">
-  </mat-form-field>
-  <mat-form-field appearance="fill">
-    <mat-label>Duration</mat-label>
-    <input matInput [(ngModel)]="course.duration">
-  </mat-form-field>
+  <div class="row">
+    <mat-form-field appearance="fill">
+      <mat-label>Course Name</mat-label>
+      <input matInput [(ngModel)]="course.name">
+    </mat-form-field>
+  </div>
+  <div class="row">
+    <mat-form-field appearance="fill">
+      <mat-label>Duration</mat-label>
+      <input matInput [(ngModel)]="course.duration">
+    </mat-form-field>
+  </div>
 </div>
-<div mat-dialog-actions>
+<div mat-dialog-actions align="end">
   <button mat-button (click)="onCancel()">Cancel</button>
-  <button mat-button (click)="onSave()">Save</button>
+  <button mat-raised-button (click)="onSave()" color="primary">Save</button>
 </div>
