--- a/src/app/user/add-course/course-dialog/course-dialog.component.html
+++ b/src/app/user/add-course/course-dialog/course-dialog.component.html
@@ -1,21 +1,26 @@
 <!-- src/app/course-dialog/course-dialog.component.html -->
-
 <h1 mat-dialog-title>{{ data.course.id ? 'Edit Course' : 'Add Course' }}</h1>
 <div mat-dialog-content>
-  <div class="row">
-    <mat-form-field appearance="fill">
-      <mat-label>Course Name</mat-label>
-      <input matInput [(ngModel)]="course.name">
-    </mat-form-field>
+  <form #addForm="ngForm" ngForm>
+  <div class="row my-2">
+    
+        <mat-form-field appearance="outline">
+          <mat-label>Course Name</mat-label>
+          <input matInput [(ngModel)]="course.name" #name="ngModel" name="name">
+        </mat-form-field>
+      </div>
+      <div class="row">
+        <mat-form-field appearance="outline">
+          <mat-label>Duration</mat-label>
+          <input matInput [(ngModel)]="course.duration" #duration="ngModel" name="duration">
+        </mat-form-field>
+        
+      </div>
+    </form>
   </div>
-  <div class="row">
-    <mat-form-field appearance="fill">
-      <mat-label>Duration</mat-label>
-      <input matInput [(ngModel)]="course.duration">
-    </mat-form-field>
+  <div mat-dialog-actions align="end">
+    <button mat-button (click)="onCancel()">Cancel</button>
+    <button mat-raised-button (click)="onSave()" color="primary" [disabled]="addForm.form.invalid">Save</button>
   </div>
-</div>
-<div mat-dialog-actions align="end">
-  <button mat-button (click)="onCancel()">Cancel</button>
-  <button mat-raised-button (click)="onSave()" color="primary">Save</button>
-</div>
+
+ 
