--- a/src/app/user/add-course/add-course/add-course.component.html
+++ b/src/app/user/add-course/add-course/add-course.component.html
@@ -13,22 +13,35 @@
   <!-- table -->
   
 
+   <div class="container" style="width: 75%;">
     <table class="table table-bordered">
-      <thead>
+      <thead class="text-center">
         <tr>
           <th *ngFor="let column of displayedColumns" scope="col">{{column | titlecase}}</th>
         </tr>
       </thead>
-      <tbody>
+      <tbody class="text-center">
         <tr *ngFor="let course of courses">
           <td>{{course.id}}</td>
           <td>{{course.name}}</td>
           <td>{{course.duration}}</td>
           <td>
             <button mat-icon-button (click)="editCourse(course)"><mat-icon>edit</mat-icon></button>
-            <button mat-icon-button color="warn" (click)="deleteCourse(course.id)"><mat-icon>delete</mat-icon></button>
+            <button mat-icon-button color="warn" (click)="deleteButton()"><mat-icon>delete</mat-icon></button>
           </td>
         </tr>
       </tbody>
     </table>
+  </div>
+   </div>
+
+    <div [hidden]="hide">
+    <h1 mat-dialog-title>Confirm Delete</h1>
+    <div mat-dialog-content>
+      Are you sure you want to delete this course?
+    </div>
+    <div mat-dialog-actions>
+      <button mat-button (click)="hide=!hide">Cancel</button>
+      <!-- <button mat-button color="warn" (click)="deleteCourse()">Delete</button> -->
+    </div>
   </div>
