--- a/src/app/user/add-course/add-course/add-course.component.html
+++ b/src/app/user/add-course/add-course/add-course.component.html
@@ -27,21 +27,34 @@
           <td>{{course.duration}}</td>
           <td>
             <button mat-icon-button (click)="editCourse(course)"><mat-icon>edit</mat-icon></button>
-            <button mat-icon-button color="warn" (click)="deleteButton()"><mat-icon>delete</mat-icon></button>
+            <button mat-icon-button color="warn" type="button" data-toggle="modal" data-target="#exampleModal"><mat-icon>delete</mat-icon></button>
+            
           </td>
         </tr>
       </tbody>
     </table>
   </div>
    </div>
-
-    <div [hidden]="hide">
-    <h1 mat-dialog-title>Confirm Delete</h1>
-    <div mat-dialog-content>
-      Are you sure you want to delete this course?
-    </div>
-    <div mat-dialog-actions>
-      <button mat-button (click)="hide=!hide">Cancel</button>
-      <!-- <button mat-button color="warn" (click)="deleteCourse()">Delete</button> -->
+   <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalLong">
+    Launch demo modal
+  </button>
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        ...
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
     </div>
   </div>
+</div>
