--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -3,6 +3,7 @@
     <mat-nav-list>
       <a mat-list-item routerLink="/user">Dashboard</a>
       <a mat-list-item routerLink="/user/addcourse">Add Course</a>
+      <a mat-list-item routerLink="/user/addsubject">Add Subject</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
