--- a/src/app/user/add-course/add-course/add-course.component.html
+++ b/src/app/user/add-course/add-course/add-course.component.html
@@ -1,19 +1,20 @@
 <div class=" text-center my-3">
-<!-- Add button -->
-  <button mat-raised-button color="primary" (click)="addCourse()">Add Course</button>
+
+  <!-- Add button -->
+  <button mat-raised-button color="primary" (click)="addEditCourse()">Add Course</button>
+
+  <!-- If 0 courses -->
   <div *ngIf="courses.length === 0">
     <p class="text-primary lead my-3">No Record!</p>
   </div>
+
 </div>
 
-<!-- If there are no courses -->
 
-<!-- if there are some courses -->
+<!-- if there are courses -->
 <div *ngIf="courses.length > 0">
   <!-- table -->
-  
-
-   <div class="container" style="width: 75%;">
+  <div class="container" style="width: 75%;">
     <table class="table table-bordered">
       <thead class="text-center">
         <tr>
@@ -26,35 +27,22 @@
           <td>{{course.name}}</td>
           <td>{{course.duration}}</td>
           <td>
-            <button mat-icon-button (click)="editCourse(course)"><mat-icon>edit</mat-icon></button>
-            <button mat-icon-button color="warn" type="button" data-toggle="modal" data-target="#exampleModal"><mat-icon>delete</mat-icon></button>
-            
+            <button mat-icon-button (click)="addEditCourse(course)"><mat-icon>edit</mat-icon></button>
+            <button mat-icon-button color="warn" (click)="deleteCourse(course.id)"><mat-icon>delete</mat-icon></button>
+
           </td>
         </tr>
       </tbody>
     </table>
   </div>
-   </div>
-   <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalLong">
-    Launch demo modal
-  </button>
-<!-- Modal -->
-<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        ...
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
-      </div>
+
+  <ng-template #deleteDialog let-dialog="dialogRef">
+    <h1 mat-dialog-title>Confirm Delete</h1>
+    <div mat-dialog-content>
+      Are you sure you want to delete this course?
     </div>
-  </div>
-</div>
+    <div mat-dialog-actions>
+      <button mat-button (click)="dialog.close()">Cancel</button>
+      <button mat-button color="warn" (click)="dialog.close(true)">Delete</button>
+    </div>
+  </ng-template>
