--- a/src/app/user/add-course/course-dialog/course-dialog.component.html
+++ b/src/app/user/add-course/course-dialog/course-dialog.component.html
@@ -1,26 +1,30 @@
-<!-- src/app/course-dialog/course-dialog.component.html -->
-<h1 mat-dialog-title>{{ data.course.id ? 'Edit Course' : 'Add Course' }}</h1>
-<div mat-dialog-content>
-  <form #addForm="ngForm" ngForm>
-  <div class="row my-2">
-    
-        <mat-form-field appearance="outline">
-          <mat-label>Course Name</mat-label>
-          <input matInput [(ngModel)]="course.name" #name="ngModel" name="name">
-        </mat-form-field>
-      </div>
-      <div class="row">
-        <mat-form-field appearance="outline">
-          <mat-label>Duration</mat-label>
-          <input matInput [(ngModel)]="course.duration" #duration="ngModel" name="duration">
-        </mat-form-field>
-        
-      </div>
-    </form>
-  </div>
-  <div mat-dialog-actions align="end">
-    <button mat-button (click)="onCancel()">Cancel</button>
-    <button mat-raised-button (click)="onSave()" color="primary" [disabled]="addForm.form.invalid">Save</button>
-  </div>
 
- 
+<!-- <h1 mat-dialog-title>{{ data.course.id ? 'Edit Course' : 'Add Course' }}</h1> -->
+<div mat-dialog-content>
+  <form [formGroup]="courseForm">
+    <div class="row my-2">
+      <mat-form-field appearance="outline">
+        <mat-label>Course Name</mat-label>
+        <input matInput formControlName="name">
+        <mat-error *ngIf="courseForm.get('name')?.hasError('required')">
+          Course name is required
+        </mat-error>
+      </mat-form-field>
+    </div>
+    <div class="row">
+      <mat-form-field appearance="outline">
+        <mat-label>Duration</mat-label>
+        <input matInput formControlName="duration">
+        <mat-error *ngIf="courseForm.get('duration')?.hasError('required')">
+          Duration is required
+        </mat-error>
+      </mat-form-field>
+    </div>
+  </form>
+</div>
+<div mat-dialog-actions align="end">
+  <button mat-button (click)="onCancel()">Cancel</button>
+  <button mat-raised-button (click)="onSave()" color="primary" [disabled]="courseForm.invalid">
+    Save
+  </button>
+</div>
