added login api

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,6 +1,6 @@
 <div style="display: flex; justify-content: center; align-items: center; height: 100vh;">
 
-  <form [formGroup]="loginForm" (ngSubmit)="saveForm()">
+  <form [formGroup]="loginForm" (ngSubmit)="login()">
     <mat-card class="container" style="width: 350px;">
       <mat-card-header style="margin: 2px auto;">
         <mat-card-title class="text-center mb-4">Login</mat-card-title>
